ingress/ingress-backoffice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backoffice
  namespace: backoffice
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
  - host: bo-qa.tourissmo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backoffice
            port:
              number: 3000
  tls:
  - hosts:
    - bo-qa.tourissmo.com
    secretName: tourissmo-staging-ssl
