ingress/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: eck
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: kibana-qa.tourissmo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eck-kb-http
            port:
              number: 5601
  tls:
  - hosts:
      - kibana-qa.tourissmo.com
    secretName: tourissmo-staging-ssl
